# phonetics-graph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README-Rust.md  README-new.md  README.md  pyproject.toml  requirements.txt
data/similarity_matrix/: matrix-style.css  matrix.html  similarity_matrix.html
paper/: .gitignore  README.md  data.bib  defs.tex  literature.bib  main.tex  preamble.tex
paper/content/: acknowledgements.tex  application.tex  conclusion.tex  data.tex  eval.tex  impl.tex  intro.tex  needleman-wunsch.tex
paper/meta/: bibliography.bib  data.bib  defs.tex  literature.bib  preamble.tex  prettify-math.tex
phonetics-graph/: Cargo.toml  README.md
phonetics-graph/results/: execution-time-block-size-tests.txt
phonetics-graph/src/: main.rs  needleman_wunsch.rs  pretty.rs
phonetics-graph/src/archive/: read_graph_single.rs
phonetics-graph/src/kernels/: needleman_wunsch.cpp  sin_kernel.cpp
phonetics-motion-canvas/: README.md  eslint.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
phonetics-motion-canvas/src/: extensions.ts  global.css  motion-canvas-extensions.d.ts  project.ts  utility.ts
python/0-data-preparation/: 2-word_list_to_phonetic_integers.py  word_list_model.py
python/1-video/: blender_curve_geometry.py  blender_edges.py  blender_import_text.py  blender_script.py  random_words.py
python/evaluation/: timing.py
src/: calculate_graph.py  data.ipynb  data_model.py  gephi.py  lib.rs  main.rs  needleman_wunsch.py  needleman_wunsch.rs  phonetic_int_map.py
src/0-data-preparation/: 0-word_list_with_phonetics.py  (+5 more)
(+20 files in other folders)
