[package]
name = "phonetics-graph"
version = "0.1.0"
edition = "2021"
default-run = "phonetics-graph"

[dependencies]
rayon = "1.10"
rayon-progress = "1.0"
csv = "1.3"

[dependencies.cudarc]
git = "https://github.com/coreylowman/cudarc.git"
rev = "refs/pull/329/head" # https://github.com/coreylowman/cudarc/pull/329
features = ["cuda-12080"]
